# OJ

./: .gitignore  CMakeLists.txt  README.md  dump.rdb  题目管理模块实现说明.md
Manual/OI_Wiki_RAG/: RAG模块使用说明.md
Manual/Problems/: 题目管理模块使用文档.md
Manual/Users/: 在线评测模块使用指南.md
Manual/common/: 公共模块使用指南.md
OI_wiki_RAG/: agent.py  build_index.py  config.py  rag_api.py  requirements.txt  searcher.py
Problems/: DATABASE_CONFIG.md  README.md  pom.xml
Problems/src/main/java/com/oj/problem/: ProblemManagementApplication.java
Problems/src/main/java/com/oj/problem/common/: ApiResponse.java  package-info.java
Problems/src/main/java/com/oj/problem/config/: JudgeProperties.java  package-info.java
Problems/src/main/java/com/oj/problem/controller/: ProblemController.java  ProblemStatusController.java  SubmissionController.java  package-info.java
Problems/src/main/java/com/oj/problem/entity/: Difficulty.java  ProblemEntity.java  ProblemUserEntity.java  ProblemUserStatusEntity.java  TagEntity.java  TestCaseEntity.java  package-info.java
Problems/src/main/java/com/oj/problem/exception/: BusinessException.java  GlobalExceptionHandler.java  package-info.java
Problems/src/main/java/com/oj/problem/repository/: ProblemRepository.java  ProblemUserRepository.java  ProblemUserStatusRepository.java  TagRepository.java  package-info.java
Problems/src/main/java/com/oj/problem/security/: CurrentUser.java  (+2 more)
Problems/src/main/resources/: application.yml  init-data.sql  schema.sql
Problems/src/main/resources/static/: app.js  index.html  problem-detail.html  problem-detail.js  styles.css
Problems/src/test/java/com/oj/problem/: StaticFrontendTest.java
Problems/src/test/resources/: application-test.yml
Users/: pom.xml
Users/src/main/java/org/example/users/: UsersApplication.java
Users/src/main/resources/: application.properties  application.yml
Users/src/main/resources/static/js/: form-hint.js  form-validate.js  monaco-init.js  profile.js  rag-drawer.js
Users/src/main/resources/templates/: home.html  index.html  login.html  profile.html  register.html  sandbox.html
common/: CMakeLists.txt
common/include/oj/: bootstrap.h  config.h  http_request.h  http_response.h  http_server.h  json_error.h  log.h  mysql_pool.h  redis_cache.h  router.h
common/src/: bootstrap.cpp  config.cpp  http_request.cpp  http_response.cpp  http_server.cpp  json_error.cpp  log.cpp  mysql_pool.cpp  redis_cache.cpp  router.cpp
common/tests/: common_smoke_test.cpp  http_smoke_test.cpp  real_env_integration_test.cpp
concurrent testing/: locust_test.py
discussion/: CMakeLists.txt
discussion/include/: discussion_handler.h  discussion_service.h  gemini_client.h
discussion/runtime_package/: README.md  start_discussion.ps1
discussion/runtime_package/web/: app.js  index.html  styles.css
discussion/sql/: discussion_schema.sql
discussion/src/: discussion_handler.cpp  discussion_service.cpp  gemini_client.cpp  main.cpp
discussion/tests/: test_discussion_service.cpp
discussion/web/: app.js  index.html  styles.css
judge/: .gitignore  .tokeignore  CMakeLists.txt  Test.java  cases.json  expect0.json  交付使用手册.md  使用文档.md  改动文档.md
judge/config/: judge_cli.json  languages.json
judge/include/: compiler.h  default_language_config.h  judge_cli_config.h  judge_engine.h  language_config.h  result_judger.h  sandbox.h  submission_handler.h  web_server.h
judge/src/: compiler.cpp  judge_cli_config.cpp  judge_engine.cpp  language_config.cpp  main.cpp  result_judger.cpp  sandbox.cpp  submission_handler.cpp  web_server.cpp
judge/tests/: test_sandbox.cpp
judge/tests/interface/dp/: README.md
judge/tests/interface/dp/testcode/: dp_stairs.c  dp_stairs.java  dp_stairs.py
judge/tests/interface/expect/: expect0.json
judge/tests/interface/testcode/: test.cpp  test.java
judge/tests/part/: test_compiler.cpp  test_result_judger.cpp  test_sandbox.cpp
judge/tools/: embed_web_assets.py
management/: README.md
management/src/main/resources/: application.yml
rank/: CMakeLists.txt  README.md
rank/docs/: 模块使用文档.md
rank/include/: leaderboard_handler.hpp
rank/include/api/: leaderboard_api.hpp
rank/include/leaderboard/: leaderboard_service.hpp  models.hpp  repository.hpp  stats_analyzer.hpp
rank/include/storage/: in_memory_cache.hpp  in_memory_repository.hpp  mysql_c_wrapper.hpp  mysql_repository.hpp  repository_factory.hpp
rank/leaderboard_isolated/: CMakeLists.txt  README.md
rank/leaderboard_isolated/include/leaderboard_isolated/: leaderboard.hpp
rank/leaderboard_isolated/src/: demo.cpp  leaderboard.cpp
rank/leaderboard_isolated/tests/: leaderboard_test.cpp
rank/runtime_package/: README.md  start_rank.ps1  sync_runtime.ps1
rank/runtime_package/web/: app.js  index.html
rank/scripts/: generate_personal_report_ppt.py  verify_ppt.py
rank/sql/: leaderboard_schema.sql  seed_demo.sql  seed_users_for_rank.sql  setup_local_mysql.sql
rank/src/: leaderboard_handler.cpp  main.cpp  server_main.cpp
rank/src/api/: leaderboard_api.cpp
rank/src/leaderboard/: leaderboard_service.cpp  stats_analyzer.cpp
rank/src/storage/: in_memory_cache.cpp  in_memory_repository.cpp  mysql_c_wrapper.cpp  mysql_repository.cpp  redis_cache.cpp  repository_factory.cpp
rank/tests/: leaderboard_extended_test.cpp  leaderboard_mysql_repository_test.cpp  leaderboard_service_test.cpp
rank/web/: app.js  index.html  styles.css
sql/: data.sql  grant_permissions.sql  schema.sql  setup.sql
temp_写个人文档/: 个人报告.md
web/: .gitignore  README.md  config.example.json  index.html
web/css/: style.css
web/js/: app.js
使用指南/Discussion/: 讨论区模块使用文档.md
使用指南/OI_Wiki_RAG/: RAG模块使用说明.md
使用指南/Users/: UsersTest.sql  用户管理模块使用文档.md
大模型辅助生成记录/尹智辉/: 代码规范.md  对话总结.md
大模型辅助生成记录/苏俊涛/: SBOM.md  bat_1.md  bat_2.md  bcrypt.md
大模型辅助生成记录/邱雨泽/: 大模型辅助生成记录.md
对话记录/: 对话总结3.md  对话总结4.md
对话记录/尹智辉/: 对话总结2.md
对话记录/苏俊涛/: deepseek2markdown.md  locust.md  monaco.md
开发指南/: 代码评测模块开发指南.md
模块使用文档/: common模块使用文档.md  排行榜模块使用文档.md  讨论区模块使用文档.md  题目模块与评测模块对接说明.md  题目管理模块使用文档.md
规划文件/: 任务分配表.xlsx  任务并行性分析和流程规划.md  项目架构以及任务分配.md
项目文件/: 数据模型设计.md
(+62 files in other folders)
